@@ -1,6 +1,8 @@
-class Object #:nodoc:
-  def tap
-    yield self
-    self
+unless defined? Object.tap
+  class Object #:nodoc:
+    def tap
+      yield self
+      self
+    end
   end
 end
