@@ -1,4 +1,5 @@
 * Fix spaces and <br> inside table cells
+* made definition of Object#tap optional
 
 0.2.3
 
